[gd_scene load_steps=2 format=3 uid="uid://bj75bju7rjf6u"]

[ext_resource type="Script" uid="uid://dl4ewywstmgt0" path="res://archieve.gd" id="1_q30y3"]

[node name="Control" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q30y3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = -8
theme_override_constants/margin_bottom = 0

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3

[node name="TextureRect" type="TextureButton" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
ignore_texture_size = true
stretch_mode = 0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
